[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/dreamscape/SelectionDeck.gd" type="Script" id=1]

[node name="SelectionDeck" type="PopupPanel" groups=["selection_decks"]]
margin_right = 1455.0
margin_bottom = 900.0
script = ExtResource( 1 )

[node name="VBC" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 1451.0
margin_bottom = 896.0

[node name="OperationName" type="Label" parent="VBC"]
margin_right = 1447.0
margin_bottom = 14.0
align = 1

[node name="OperationCost" type="Label" parent="VBC"]
margin_top = 18.0
margin_right = 1447.0
margin_bottom = 32.0
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBC"]
margin_top = 36.0
margin_right = 1447.0
margin_bottom = 636.0
rect_min_size = Vector2( 0, 600 )

[node name="GridContainer" type="GridContainer" parent="VBC/ScrollContainer"]
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 5
